# test_polishing

./: CMakeLists.txt  package.xml
cfg/: attractive_params.cfg  conveyorBelt_params.cfg  object_params.cfg
config/: optitrack.yaml  polishingMotion_params.yml  test.yaml
include/: AttractiveMotionGenerator.h  ConveyorBeltController.h  MoveToDesiredJoints.h  MovingObject.h  ObjectStateManager.h
launch/: conveyorBelt.launch  forwardKinematicsView.launch  polishMovingTarget.launch  test_launch.launch  test_optitrack.launch
src/: AttractiveMotionGenerator.cpp  ConveyorBeltController.cpp  MoveToDesiredJoints.cpp  MovingObject.cpp  ObjectStateManager.cpp  attractiveMotion_node.cpp  conveyorBelt_node.cpp  convoyer_node.cpp  listenerKuka.cpp  moveToDesiredJoints_node.cpp  movingObject_node.cpp  objectStateManager_node.cpp  polishingMotionGeneration_node.cpp  talkerKuka.cpp
